--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <model-viewer src="/models/chair-via-polycam.glb"
+    <model-viewer src="./models/chair-via-polycam.glb"
               
               alt="A 3D model of an astronaut"
               ar
