--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <model-viewer src="./models/chair-via-polycam.glb"
-              
+              src="./models/chair-via-3d-sampler.glb"
+              src="./models/chair-via-luma.glb"
               alt="A 3D model of an astronaut"
               ar
               auto-rotate
