--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 <body>
 
-    <model-viewer src="./models/chair-via-polycam.glb"
-              src="./models/chair-via-3d-sampler.glb"
-              src="./models/chair-via-luma.glb"
+            <model-viewer src="./models/chair-via-polycam.glb"
+              alt="A 3D model of an astronaut"
+              ar
+              auto-rotate
+              camera-controls></model-viewer>
+    
+              <model-viewer src="./models/chair-via-3d-sampler.glb"
+              alt="A 3D model of an astronaut"
+              ar
+              auto-rotate
+              camera-controls></model-viewer>
+
+              <model-viewer src="./models/chair-via-luma.glb"
               alt="A 3D model of an astronaut"
               ar
               auto-rotate
