--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
 </head>
 <body>
 
-            <model-viewer src="./models/chair-via-polycam.glb"
-              alt="A 3D model of an astronaut"
-              ar
-              auto-rotate
-              camera-controls></model-viewer>
+    <model-viewer src="chair-via-3d-sampler.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+        <button class="Hotspot" slot="hotspot-1" data-position="0.08913096929866397m 0.610566287792596m 0.18878958329214626m" data-normal="-0.04241099635214494m 0.9990433762988326m 0.010660190516488413m" data-visibility-attribute="visible">
+            <div class="HotspotAnnotation">Nice leather</div>
+        </button><button class="Hotspot" slot="hotspot-2" data-position="-0.2789034422155888m 0.962882756247089m -0.11752513848599852m" data-normal="0.8626656565936379m 0.3383420244073293m 0.37594233527739046m" data-visibility-attribute="visible">
+            <div class="HotspotAnnotation">Good quality wood</div>
+        </button>
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button" id="ar-button">
+            View in your space
+        </button>
+        <div id="ar-prompt">
+            <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+        </div>
+    </model-viewer>
+    
     
               <model-viewer src="./models/chair-via-3d-sampler.glb"
               alt="A 3D model of an astronaut"
